--- a/lib/gdb/CMakeLists.txt
+++ b/lib/gdb/CMakeLists.txt
@@ -1,2 +1,3 @@
 include_directories(include)
-add_library(gdb gdb.c arch/arm/64/gdb.c)
+add_library(gdb STATIC gdb.c arch/arm/64/gdb.c)
+target_link_libraries(gdb microkit util uart)
