--- a/lib/uart/CMakeLists.txt
+++ b/lib/uart/CMakeLists.txt
@@ -1,3 +1,3 @@
-include_directories(include)
-add_library(uart uart.c)
+add_library(uart STATIC uart.c include/uart.h)
+target_include_directories(uart PUBLIC include)
 target_link_libraries(uart microkit)
