wip: nearly back to the same functionality as in-kernel stub
Signed-off-by: Alwin Joshy <joshyalwin@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,10 @@ add_subdirectory(lib/util)
 
 add_subdirectory(apps/ping)
 add_subdirectory(apps/pong)
+add_subdirectory(apps/debugger)
 
 add_custom_target(image ALL # OUTPUT ${IMAGE_FILE}
                    COMMAND ${MICROKIT_TOOL} ${CMAKE_SOURCE_DIR}/example.system --search-path ${EXECUTABLE_OUTPUT_PATH}
                             --board ${BOARD} --config ${MICROKIT_CONFIG} -o ${IMAGE_FILE} -r ${REPORT_FILE}
-                   DEPENDS ping.elf pong.elf
+                   DEPENDS ping.elf pong.elf debugger.elf
         )
