--- a/lib/printf/CMakeLists.txt
+++ b/lib/printf/CMakeLists.txt
@@ -1,2 +1,2 @@
-include_directories(include)
-add_library(printf STATIC printf.c)
+add_library(printf STATIC printf.c include/printf.h)
+target_include_directories(printf PUBLIC include)
