--- a/lib/gdb/CMakeLists.txt
+++ b/lib/gdb/CMakeLists.txt
@@ -1,3 +1,3 @@
-include_directories(include)
-add_library(gdb STATIC gdb.c arch/arm/64/gdb.c)
+add_library(gdb STATIC gdb.c arch/arm/64/gdb.c include/gdb.h include/arch/arm/64/gdb.h)
+target_include_directories(gdb PUBLIC include)
 target_link_libraries(gdb microkit util uart)
