--- a/lib/util/CMakeLists.txt
+++ b/lib/util/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(util STATIC util.c include/util.h)
 target_include_directories(util PUBLIC include)
+target_link_libraries(util printf microkit)
